<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_project</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="odjones1@crimson.ua.edu">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>tf2_ros</depend>
  <depend>rvis2</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
